--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,17 +10,14 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
-    .container
-      .navbar.navbar-fixed-top.navbar-inverse
-        .navbar-inner
-          .container
-            = link_to 'Home', root_path
-            nav
-              ul class='nav pull-right'
-                li
-                  = link_to 'Admin', admin_path
+    nav class='navbar navbar-default navbar-fixed-top'
       .container
-        - flash.each do |key, value|
-          div class='alert alert-#{key}'
-            = value
+        .navbar-brand.navbar-left
+          = link_to 'Home', root_path
+        .navbar-brand.navbar-right
+          = link_to 'Admin', admin_path
+    .container
+      - flash.each do |key, value|
+        div class='alert alert-#{key}'
+          = value
       = yield
