--- a/app/views/rates/show.slim
+++ b/app/views/rates/show.slim
@@ -1,7 +1,6 @@
-div
-  | Our current dollar rate:
+h1 Our current dollar rate:
 - if @rate
-  = @rate&.value
+  h3
+    = number_to_currency(@rate&.value, unit: "\u20bd", precision: 4, format: "%n %u")
 - else
-  div
-    | isn't set yet
+  h3 isn't set yet
