--- a/app/views/forced_rates/edit.slim
+++ b/app/views/forced_rates/edit.slim
@@ -14,7 +14,7 @@ h2 Please, enter a new forced rate
     = f.number_field :value, step: :any, class: 'form-control'
 
   .form-group
-    = f.label :expiry_time
+    = f.label :expiry_time, 'Expiry time in UTC'
     = f.datetime_field :expiry_time, class: 'form-control'
 
   = f.submit class: 'btn btn-primary'
